[package]
name = "changelogger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.20.2"
chrono = { version = "0.4", features = ["clock"] }
semver = "1.0"
regex = "1"
dialoguer = "0.12"
owo-colors = "4"
once_cell = "1"